WIP. Add column type validator.